# Code-Notebook

./: .gitignore  Cargo.toml  app.rc  build.rs  create_small_icon.rs  installer.nsi  png_to_ico.rs
.claude/: settings.local.json
CodeNotebook-Portable-0.1.0/: install_context_menu.bat  install_win11_menu.ps1  uninstall_context_menu.bat  使用说明.txt
CodeNotebook-Portable-0.1.0/Docs/: LICENSE.txt  README.md
src/: main.rs
src/UI/: components.rs  layout.rs  mod.rs  styles.rs  syntax_highlighter.rs
